--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,76 @@
 /* ini css */
+
+.main-header {
+    text-align: center;
+}
+
+.selection-content{
+    display: flex;
+    flex-direction: column;
+}
+
+.selection-btn {
+    height: 32px;
+    border-radius: 8px;
+    border: none;
+}
+
+.lightblue-color {
+    background-color: lightblue;
+}
+.bisque-color {
+    background-color: bisque;
+}
+
+.luas-segitiga-header {
+    border: 1px solid;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    background: lightblue;
+    text-align: center;
+}
+
+.luas-segitiga-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.luas-segitiga-img {
+    height: 300px;
+    width: 300px;
+    background-image: url(https://th.bing.com/th/id/OIP.PCdA9wkodLzfkqjGl4LhBwAAAA?rs=1&pid=ImgDetMain);
+    background-size: cover;
+    background-position: center;
+    align-self: center;
+}
+
+.luas-segitiga-form-header {
+    text-align: center;
+}
+
+.input-wrapper {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.input-wrapper>input {
+    width: 30%;
+}
+
+input[type=number] {
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.main-content {
+    display: flex
+}
+
+.main-content>aside {
+    flex: 1;
+}
